--- a/paper.tex
+++ b/paper.tex
@@ -98,12 +98,7 @@ VLSI Routing, Global Routing, Routing Algorithms, Fast Global Routing, Fast Rout
 
 \section{Introduction}
 
-Routing is considered a critical step in physical design process. Until now we have not achieved the optimum solution for VLSI routing.It is exactly done in two steps:
-\begin{enumerate}
-    \item Global routing.
-    \item Detailed routing.
-\end{enumerate}
-We first run a global routing which is the responsible for making an approximate routing for the whole circuit in order to be used as a guide for detailed routing, then we run a detailed routing to make the exact routing for the system. That means if global or detailed routing is improved the whole routing process is improved, but there are many problems we have to overcome to make a correct routing process. First of all we have to take into consideration the scale, as millions of wires are exist in a small chip area which means that many kilometers of wires are placed in a very small area, so we have to minimize total wire length as much as we can, also we know that as the wire length increases the resistance increases as well which means more delay in the chip. We can find another problem as circuits are done in nano-scale which means that its geometric will be complex. Another problem that routing algorithm have to be applicable for more than one layer with different costs. We also have to take into consideration the direction of wires in every layer (vertical | horizontal) and no diagonal pathes, then to go from source 'S' to target 'T'
+Routing is critical step in physical design process. Until now the optimum solution for VLSI routing has not been achieved yet, so it is considered as a very interesting challenging feild. It is exactly done in two steps, global routing and detailed routing. At first global routing is run which is the responsible for making an approximate routing for the whole circuit in order to be used as a guide for detailed routing, then the detailed routing is run to make the exact routing for the system. That means if global or detailed routing is improved the whole routing process is improved, but there are many problems we have to overcome to make a correct routing process. First of all we have to take into consideration the scale, as millions of wires exist in a small chip area which means that many kilometers of wires are placed in a very small area, so we have to minimize total wire length as much as we can, also we know that as the wire length increases the resistance increases as well which means more delay in the chip. We can find another problem as circuits are made in nano-scale which means that its geometric will be complex. Another problem that routing algorithm have to be applicable for more than one layer with different costs. We also have to take into consideration the direction of wires in every layer (vertical | horizontal) and no diagonal pathes, then to go from source 'S' to target 'T' the path taken should be in (vertical | horizontal) directions thet specified by the layer (at each layer wires are placed in one direction only), then there is another problem as when a wire goes from layer to another to continue on the perpendicular direction it have to go through via which have a high resistance. DFM (design for manufacturer) rules also has to be achieved. All of these constraints must be taken into consideration with the global routing to achieve hundred percent of the circuit connections, that means global routing will take a lot of time to achieve all these constraints, and here is the challenge to achieve all the routing specifications with minimum time taken. 
 
 \begin{figure} 
 \centering  
@@ -117,7 +112,7 @@ We first run a global routing which is the responsible for making an approximate
         \foreach \y in {0,0.5,...,2.5}
             \node[box] at (\x,\y){};
     }
-    
+    \node [box,fill=green] at (0,0.5){A};  
     \node[box,fill=green] at (3,3){A};  
     \node[box,fill=red  ] at (2,2){};  
     \node[box,fill=blue ] at (1,1){};  
@@ -171,8 +166,11 @@ We first run a global routing which is the responsible for making an approximate
     \node[box,fill=blue ] at (1,1){};  
     \end{tikzpicture}
 }
-
+\caption{Steps to get the best global routing}
+\label{fig:GlobalRoutingProcess}
 \end{figure}
+
+In Figure~\ref{fig:GlobalRoutingProcess} 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -181,7 +179,7 @@ We first run a global routing which is the responsible for making an approximate
 
 \section{Related Work}
 
-Several papers proposed various types of approaches to improve the overall efficiency of the multilevel feedback queue scheduling algorithm. The chosen quantum time for each queue plays a major role. Hence, it is essential to choose a proper method to compute the time quantum value to minimize response time and maximize overall performance. In \cite{b2}, an algorithm is introduced for minimizing the response time. In this algorithm, a Recurrent Neural Network (RNN) is used to determine both the number of queues and the optimized time quantum value for each queue. The RNN generates an effective model to compute the time quantum value. Their proposed intelligent version of the MLFQ offers good results, however, it suffers from a few drawbacks, the first being the direct proportionality of its network learning time and the amount of input data, and the second is the possibility of experiencing initial overhead at the first iterations of the algorithm. Our approach proposes an improved version of MLFQ that utilizes an altered version of RR named shortest remaining burst round-robin (SRBRR) introduced in \cite{b3} which avoids the cost of learning time and overhead time in \cite{b2}. Regarding the various approaches to improve the MLFQ algorithm, those attempts dealt with starvation by assigning different quantum values to the ready queues depending on their priority. Our approach also deals with starvation by boosting processes from lower priority queues to higher ones according to certain criteria.
+Several papers proposed various types of approaches to improve the overall efficiency of the multilevel feedback queue scheduling algorithm. The chosen quantum time for each queue plays a major role. Hence, it is essential to choose a proper method to compute the time quantum value to minimize response time and maximize overall performance. In , an algorithm is introduced for minimizing the response time. In this algorithm, a Recurrent Neural Network (RNN) is used to determine both the number of queues and the optimized time quantum value for each queue. The RNN generates an effective model to compute the time quantum value. Their proposed intelligent version of the MLFQ offers good results, however, it suffers from a few drawbacks, the first being the direct proportionality of its network learning time and the amount of input data, and the second is the possibility of experiencing initial overhead at the first iterations of the algorithm. Our approach proposes an improved version of MLFQ that utilizes an altered version of RR named shortest remaining burst round-robin (SRBRR) introduced in  which avoids the cost of learning time and overhead time in . Regarding the various approaches to improve the MLFQ algorithm, those attempts dealt with starvation by assigning different quantum values to the ready queues depending on their priority. Our approach also deals with starvation by boosting processes from lower priority queues to higher ones according to certain criteria.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PROPOSED APPROACH %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -189,7 +187,7 @@ Several papers proposed various types of approaches to improve the overall effic
 
 \section{Proposed Approach}
 
-For a multilevel feedback queue scheduling algorithm, three parameters are considered. The first is the chosen scheduling algorithm for each queue, especially the last queue as its scheduling algorithm is expected to treat starvation. The second is the criteria according to which a process is promoted, this technique is also known as Aging. The third is the criteria according to which a process is demoted. In our proposed algorithm, there are 5 queues sorted in ascending order in line with their priority number, 1 being the highest priority and 5 being the lowest. Each queue uses a modified version of the round-robin scheduling algorithm stated in \cite{b3}. In \cite{b3}, processes are sorted in ascending order according to their burst time and are assigned a time quantum that equals the median burst time of those processes. This algorithm provides better turnaround time and waiting time than the standard static quantum RR algorithm whose quantum, if set too short, leads to many context switches and, if set too long, morphs the algorithm into an FCFS algorithm. The proposed alteration on the stated algorithm in \cite{b3} is that each queue quantum time equals the median burst time multiplied by a factor matching the queue number. Hence, the gradual increase of quantum time as priority decreases. For clarification, a queue with priority equal $2$ has the following processes denoted by their burst time: $100$, $300$, $550$, $600$, $620$, $700$, $720$, $900$ and $1200$, the median value is $620$, since we are in a queue whose priority equals $2$, therefore the quantum slice value according to the proposed approach equals $1240$ as in $620 * 2$. If processes of a certain queue didn't terminate after assigning the quantum time value, they are shifted to the next lower priority queue. After introducing new processes into a queue, the quantum time slice is recalculated. Processes age whenever they are in a queue whose priority is one less than that currently getting scheduled and satisfies the following inequality:
+For a multilevel feedback queue scheduling algorithm, three parameters are considered. The first is the chosen scheduling algorithm for each queue, especially the last queue as its scheduling algorithm is expected to treat starvation. The second is the criteria according to which a process is promoted, this technique is also known as Aging. The third is the criteria according to which a process is demoted. In our proposed algorithm, there are 5 queues sorted in ascending order in line with their priority number, 1 being the highest priority and 5 being the lowest. Each queue uses a modified version of the round-robin scheduling algorithm stated in {b3}. In {b3}, processes are sorted in ascending order according to their burst time and are assigned a time quantum that equals the median burst time of those processes. This algorithm provides better turnaround time and waiting time than the standard static quantum RR algorithm whose quantum, if set too short, leads to many context switches and, if set too long, morphs the algorithm into an FCFS algorithm. The proposed alteration on the stated algorithm in {b3} is that each queue quantum time equals the median burst time multiplied by a factor matching the queue number. Hence, the gradual increase of quantum time as priority decreases. For clarification, a queue with priority equal $2$ has the following processes denoted by their burst time: $100$, $300$, $550$, $600$, $620$, $700$, $720$, $900$ and $1200$, the median value is $620$, since we are in a queue whose priority equals $2$, therefore the quantum slice value according to the proposed approach equals $1240$ as in $620 * 2$. If processes of a certain queue didn't terminate after assigning the quantum time value, they are shifted to the next lower priority queue. After introducing new processes into a queue, the quantum time slice is recalculated. Processes age whenever they are in a queue whose priority is one less than that currently getting scheduled and satisfies the following inequality:
 \begin{equation}
 \frac{waiting \; time \; of \; P}{burst \; time \; of \; P} >= 1\label{eq1}
 \end{equation}
@@ -481,7 +479,7 @@ To assess the performance of the proposed algorithm implementation, multiple tes
 
 \subsubsection{Experiment 1}
 
-In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in \cite{b4}. The first uses a static version of the RR algorithm for scheduling each queue, while the second variant uses a dynamic version of the RR algorithm for doing so.
+In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in {b4}. The first uses a static version of the RR algorithm for scheduling each queue, while the second variant uses a dynamic version of the RR algorithm for doing so.
 
 \begin{table}[H]
     \caption{Experiment 1 Input}
@@ -520,7 +518,7 @@ In this experiment, the proposed algorithm is compared against two MLFQ algorith
 
 \subsubsection{Experiment 2}
 
-In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in \cite{b4}. The first uses a static version of the SJFRR algorithm for scheduling each queue, while the second variant uses a dynamic version of the SJFRR algorithm for doing so. 
+In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in {b4}. The first uses a static version of the SJFRR algorithm for scheduling each queue, while the second variant uses a dynamic version of the SJFRR algorithm for doing so. 
 
 \begin{table}[H]
     \caption{Experiment 2 Input}
@@ -559,7 +557,7 @@ In this experiment, the proposed algorithm is compared against two MLFQ algorith
 
 \subsubsection{Experiment 3}
 
-In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in \cite{b5}. The first uses a static version of the SJFRR algorithm for scheduling each queue, while the second variant uses a dynamic version of the SJFRR algorithm for doing so.
+In this experiment, the proposed algorithm is compared against two MLFQ algorithm variants stated in {b5}. The first uses a static version of the SJFRR algorithm for scheduling each queue, while the second variant uses a dynamic version of the SJFRR algorithm for doing so.
 
 \begin{table}[H]
     \caption{Experiment 3 Input}
@@ -602,7 +600,7 @@ In this experiment, the proposed algorithm is compared against two MLFQ algorith
 
 \subsubsection{Experiment 4}
 
-In this experiment, the proposed algorithm is compared against multiple variants of the MLFQ algorithm that are stated in \cite{b6}: standard MLFQ algorithm, a priority-based MLFQ algorithm and a vague logic-based MLFQ algorithm.
+In this experiment, the proposed algorithm is compared against multiple variants of the MLFQ algorithm that are stated in {b6}: standard MLFQ algorithm, a priority-based MLFQ algorithm and a vague logic-based MLFQ algorithm.
 
 \begin{table}[H]
     \caption{Experiment 4 Input}
@@ -692,7 +690,7 @@ This experiment is the same as the previous one, but with a different input test
 
 \subsubsection{Experiment 6}
 
-In this experiment, the proposed algorithm is compared against two variants of the RR algorithm stated in \cite{b3}. The first is a static version of the RR algorithm with a constant quantum value of $25$ for scheduling each queue while the second uses a dynamic version of the RR algorithm called SRBRR for doing so. 
+In this experiment, the proposed algorithm is compared against two variants of the RR algorithm stated in {b3}. The first is a static version of the RR algorithm with a constant quantum value of $25$ for scheduling each queue while the second uses a dynamic version of the RR algorithm called SRBRR for doing so. 
 
 \begin{table}[H]
     \caption{Experiment 6 Input}
@@ -731,7 +729,7 @@ In this experiment, the proposed algorithm is compared against two variants of t
 
 \subsubsection{Experiment 7}
 
-This experiment is the same as the previous one, but with a different input test case. Note that for this test case, a process queue number is irrelevant to both the RR algorithm and the SRBRR algorithm mentioned in \cite{b3}.
+This experiment is the same as the previous one, but with a different input test case. Note that for this test case, a process queue number is irrelevant to both the RR algorithm and the SRBRR algorithm mentioned in {b3}.
 
 \begin{table}[H]
     \caption{Experiment 7 Input}
@@ -823,7 +821,7 @@ From the above simulations of different test cases and multiple performance comp
     \addplot[plot 2,bar group size={2}{3}, magenta]
     coordinates {(Exp. 6,148.2) (Exp. 7,152.2)};
     
-    \legend{Proposed Algorithm,Dynamic RR MLFQ, Static RR MLFQ, Dyn. SJFRR MLFQ of \cite{b4},  Stat. SJFRR MLFQ of \cite{b4}, Dyn. SJFRR MLFQ of \cite{b5}, Stat. SJFRR MLFQ of \cite{b5}, VMLFQ, MLFQ, PMLFQ, Dynamic SRBRR, Static RR}
+    \legend{Proposed Algorithm,Dynamic RR MLFQ, Static RR MLFQ, Dyn. SJFRR MLFQ of {b4},  Stat. SJFRR MLFQ of {b4}, Dyn. SJFRR MLFQ of {b5}, Stat. SJFRR MLFQ of {b5}, VMLFQ, MLFQ, PMLFQ, Dynamic SRBRR, Static RR}
     \end{axis}
 \end{tikzpicture}
 \end{center}
@@ -878,7 +876,7 @@ From the above simulations of different test cases and multiple performance comp
     \addplot[plot 2,bar group size={2}{3}, magenta]
     coordinates {(Exp. 6,97.2) (Exp. 7,108.8)};
     
-    \legend{Proposed Algorithm,Dynamic RR MLFQ, Static RR MLFQ, Dyn. SJFRR MLFQ of \cite{b4},  Stat. SJFRR MLFQ of \cite{b4}, Dyn. SJFRR MLFQ of \cite{b5}, Stat. SJFRR MLFQ of \cite{b5}, VMLFQ, MLFQ, PMLFQ, Dynamic SRBRR, Static RR}
+    \legend{Proposed Algorithm,Dynamic RR MLFQ, Static RR MLFQ, Dyn. SJFRR MLFQ of {b4},  Stat. SJFRR MLFQ of {b4}, Dyn. SJFRR MLFQ of {b5}, Stat. SJFRR MLFQ of {b5}, VMLFQ, MLFQ, PMLFQ, Dynamic SRBRR, Static RR}
     \end{axis}
 \end{tikzpicture}
 \end{center}
