First Paper Related Work

--- a/paper.tex
+++ b/paper.tex
@@ -221,8 +221,7 @@ Figure~\ref{fig:GlobalRoutingProcess} shows a very simple approach of how the gl
 
 \section{Related Work}
 
-Several papers proposed various types of approaches to improve the routing process, each of them tried to improve the overall routing by improving one or more parameters, some paperes tried to decrease number of vias, other papers tried to decrease the time taken and so on. In \cite{b2} they used two bounded length maze algorithms as finding path algorithms in order to make the router faster, the first one is optimal-BLMR which is used to get the minimum cost paths to be used as a routing paths, this can be done in three steps, first BLC (bounded length constraint) is defined as grater than Manhattan distance then to go from source to target the neighbour points are tested if it can be a part of path or not, each point that violates the BLC constraint is discarded, second  
-
+Several papers proposed various types of approaches to improve the routing process, each of them tried to improve the overall routing by improving one or more parameters, some paperes tried to decrease number of vias, other papers tried to decrease the time taken and so on. In \cite{b2} they used a sequential global routing and they provided two bounded length maze algorithms as finding path algorithms in order to make the router faster and to avoid congestions thus avoiding overflow, the first one is optimal-BLMR and the second one is heuristic-BLMR. optimal-BLMR is used to get the minimum cost paths to be used as a routing paths, this can be done in three steps. First BLC (bounded length constraint) is defined as a grater number than Manhattan distance then to go from source to target the neighbour points are tested if it can be a part of path or not, each point that violates the BLC constraint is discarded. Second if the route started from point \textit{v} and ended at point \textit{u} and there was many paths between these two points, the normal maze algorithm wwill take the path with minimum cost which may cause the route get into congestions, bun in optimal-BLMR they keep track of all paths between these two points in order to choose the path that will not cause overflow, it iterates on the minimum cost path everytime and if it found a suitable path it reserves that path otherwise it discard that path. Third step the optimal-BLMR iterates on the reserved paths and choose the one to be used for routing. In heuristic-BLMR they tried to speed the router up by reserving only one path between the two points, but they also wanted to keep the advantage of optimal-BLMR (avoidng congestions) and this can be achieved by choosing the selected path only if the wirelength is enough to detour around congested regions. The advantages of this paper are using sequential global routing which is based on multithreaded global routing which speedup the router, avoiding collision by using optimal-BLMR, and making a fast and nearly avoiding collision algorithm (heuristic-BLMR). But there are some disadvanatges too, as optimal-BLMR is very slow to be used, although heuristic-BLMR is faster than optimal-BLMR its results are not accurate as the wirelength is not the best compared with other papers.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% PROPOSED APPROACH %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
